soleil.htmlの名前変更

--- a/aboutcompany.html
+++ b/aboutcompany.html
@@ -281,7 +281,7 @@ footer {
 <header>
   <div class="nav-container">
     <div class="logo">
-      <a href="soleil.html">Soleil Air　　</a>
+      <a href="index.html">Soleil Air　　</a>
     </div>
     <nav>
       <ul>
@@ -342,7 +342,7 @@ footer {
     </section>
 
     <div style="text-align:left;">
-      <a href="soleil.html" class="back-home">トップページに戻る</a>
+      <a href="index.html" class="back-home">トップページに戻る</a>
     </div>
 
   </main>
