--- a/incident-report.html
+++ b/incident-report.html
@@ -248,7 +248,7 @@ footer {
 <header>
   <div class="nav-container">
     <div class="logo">
-      <a href="soleil.html">Soleil Air　　</a>
+      <a href="index.html">Soleil Air　　</a>
     </div>
     <nav>
       <ul>
@@ -301,7 +301,7 @@ footer {
 <br>
 <a href="incident-report.pdf" class="back-btn">墜落調査報告書（公表版）をダウンロード</a>
 <br>
-<a href="soleil.html" class="back-btn">トップページへ戻る</a>
+<a href="index.html" class="back-btn">トップページへ戻る</a>
 
 </main>
 
