--- a/news.html
+++ b/news.html
@@ -292,7 +292,7 @@ footer {
 <header>
   <div class="nav-container">
     <div class="logo">
-      <a href="soleil.html">Soleil Air　　</a>
+      <a href="index.html">Soleil Air　　</a>
     </div>
     <nav>
       <ul>
@@ -368,7 +368,7 @@ footer {
   </div>
  </section>
     <div style="text-align:left;">
-      <a href="soleil.html" class="back-home">トップページに戻る</a>
+      <a href="index.html" class="back-home">トップページに戻る</a>
     </div>
 </main>
 
