--- a/Skylink.html
+++ b/Skylink.html
@@ -293,7 +293,7 @@ footer {
 <header>
   <div class="nav-container">
     <div class="logo">
-      <a href="soleil.html">Soleil Air　　</a>
+      <a href="index.html">Soleil Air　　</a>
     </div>
     <nav>
       <ul>
