--- a/baggage.html
+++ b/baggage.html
@@ -345,7 +345,7 @@ footer {
   <header>
    <div class="nav-container">
      <div class="logo">
-       <a href="soleil.html">Soleil Air　　</a>
+       <a href="index.html">Soleil Air　　</a>
      </div>
      <nav>
        <ul>
