--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ footer {
 <header>
   <div class="nav-container">
     <div class="logo">
-      <a href="soleil.html">Soleil Air　　</a>
+      <a href="index.html">Soleil Air　　</a>
     </div>
     <nav>
       <ul>
