--- a/soleil-login.html
+++ b/soleil-login.html
@@ -116,7 +116,7 @@
 
         <!-- メインサイトへの戻るリンク -->
         <div class="text-center pt-4 border-t border-[#30363d]">
-            <a href="soleil.html" class="text-sm text-yellow-400 hover:text-yellow-300 transition duration-150">
+            <a href="index.html" class="text-sm text-yellow-400 hover:text-yellow-300 transition duration-150">
                 &larr; メインウェブサイトに戻る
             </a>
         </div>
