スマホ版改訂3

--- a/index.html
+++ b/index.html
@@ -668,31 +668,33 @@ footer {
 
 <section class="alert-banner">
   <div class="alert-content">
-    <h3>【重要】オリオン900型機 墜落事故に関するご報告と心よりのお詫び</h3>
-    <div style="width: 1000px; text-align: left; margin: 0 auto; white-space: normal;">
+    <h3>【重要】オリオン900型機 <br class="sp-only">墜落事故に関するご報告と心よりのお詫び</h3>
+    <div class="pc-only">
+    <p  style="width: 1000px; text-align: left; margin: 0 auto; white-space: normal;">
+      このたび、弊社が導入予定であった<strong>オリオン900型機</strong>が、<strong>アストレオン</strong>社のペイン・フィールド空港（PAE）から東京国際空港（RJTT）への<strong style="color: var(--soleil-light);">回送運行（フェリーフライト）中</strong>に墜落する事故が発生いたしました。
+      <br><br>この事態を厳粛に受け止めるとともに、今回の事故により、搭乗していた<strong style="color: var(--soleil-light);">弊社エースパイロット</strong>の<strong>安藤浩紀氏</strong>が亡くなられたことに、深い哀悼の意を表します。
+      <br><br>この事故によるその他の犠牲者はおりません。現在までの詳細な調査の結果、機体システム (<strong>Skylink</strong>)に<strong style="color: var(--soleil-light);">致命的な欠陥は確認されず</strong>、<strong>パイロットによる不適切な手動介入</strong>が主要因であるとの結論に至っております。
+      <br><br>弊社は、この結果を重く受け止めつつも、今後も<strong style="color: var(--soleil-light);">AI技術の活用によって人為的ミスを極限まで減らし</strong>、より安全な運航体制を構築する理念を堅持してまいります。引き続き真相解明に努め、再発防止を徹底いたします。
+    </p>
+    <p style="margin-top: 25px; border-top: 1px solid rgba(255,255,255,0.2); padding-top: 15px;">
+      関係者の皆さまおよびお客様に多大なご心配をおかけしましたことを、  
+      <strong style="color: var(--soleil-light);">心よりお詫び申し上げます。</strong>
+    </p>
+    </div>
+
+    <div class="sp-only" style="width: 300px; text-align: left; margin: 0 auto; white-space: normal;">
     <p>
       このたび、弊社が導入予定であった<strong>オリオン900型機</strong>が、<strong>アストレオン</strong>社のペイン・フィールド空港（PAE）から東京国際空港（RJTT）への<strong style="color: var(--soleil-light);">回送運行（フェリーフライト）中</strong>に墜落する事故が発生いたしました。
       <br><br>この事態を厳粛に受け止めるとともに、今回の事故により、搭乗していた<strong style="color: var(--soleil-light);">弊社エースパイロット</strong>の<strong>安藤浩紀氏</strong>が亡くなられたことに、深い哀悼の意を表します。
       <br><br>この事故によるその他の犠牲者はおりません。現在までの詳細な調査の結果、機体システム (<strong>Skylink</strong>)に<strong style="color: var(--soleil-light);">致命的な欠陥は確認されず</strong>、<strong>パイロットによる不適切な手動介入</strong>が主要因であるとの結論に至っております。
       <br><br>弊社は、この結果を重く受け止めつつも、今後も<strong style="color: var(--soleil-light);">AI技術の活用によって人為的ミスを極限まで減らし</strong>、より安全な運航体制を構築する理念を堅持してまいります。引き続き真相解明に努め、再発防止を徹底いたします。
     </p>
-    </div>
-
-        <!-- <p>
-      このたび、弊社が導入予定であった<strong>オリオン900型機</strong>が、<strong>アストレオン</strong>社のペイン・フィールド空港（PAE）から
-      <br class="pc-only">東京国際空港（RJTT）への<strong style="color: var(--soleil-light);">回送運行（フェリーフライト）中</strong>に墜落する事故が発生いたしました。<br class="sp-only"><br class="sp-only">この事態を
-      <br class="pc-only">厳粛に受け止めるとともに、今回の事故により、搭乗していた<strong style="color: var(--soleil-light);">弊社エースパイロット</strong>の<strong>安藤浩紀氏</strong>が亡くなられたことに、
-      <br class="pc-only">深い哀悼の意を表します。<br class="sp-only"><br class="sp-only">この事故によるその他の犠牲者はおりません。現在までの詳細な調査の結果、機体システム
-      <br class="pc-only">(<strong>Skylink</strong>)に<strong style="color: var(--soleil-light);">致命的な欠陥は確認されず</strong>、<strong>パイロットによる不適切な手動介入</strong>が主要因であるとの結論に至っております。<br class="sp-only"><br class="sp-only">
-      <br class="pc-only">弊社は、この結果を重く受け止めつつも、今後も<strong style="color: var(--soleil-light);">AI技術の活用によって人為的ミスを極限まで減らし</strong>、より安全な運航
-      <br class="pc-only">体制を構築する理念を堅持してまいります。引き続き真相解明に努め、再発防止を徹底いたします。
-    </p> -->
-
-
-    <p style="margin-top: 25px; border-top: 1px solid rgba(255,255,255,0.2); padding-top: 15px;">
-      関係者の皆さまおよびお客様に多大なご心配をおかけしましたことを、  
+    <p style="margin-top: 25px; border-top: 1px solid rgba(255,255,255,0.2); padding-top: 15px;width: 300px; text-align: center; ">
+      関係者の皆さまおよびお客様に<br>多大なご心配をおかけしましたことを、<br>  
       <strong style="color: var(--soleil-light);">心よりお詫び申し上げます。</strong>
     </p>
+    </div>
+
     <div class="read-more-container">
     <a href="incident-report.html" class="alert-detail-button">詳細はこちら</a>
     </div>
