--- a/index.html
+++ b/index.html
@@ -532,11 +532,16 @@ footer {
 }
 
 @media (max-width: 768px) {
-/* --- 1. ヘッダー/ナビゲーションの修正 --- */
+  .hero-content h1 { font-size: 3rem; }
+  .hero-content .merger-message {font-size: 1rem;}
+  .hero-content .tagline { font-size: 1.3rem; }
+  .booking-button { font-size: 1.1rem; padding: 12px 35px; }
+  .footer-content { flex-direction: column; align-items: center; text-align: center; }
+  /* --- 1. ヘッダー/ナビゲーションの修正 --- */
     .nav-container { flex-direction: column; padding: 12px 15px; white-space: normal; }
     .logo a { font-size: 1.5rem; margin-bottom: 10px; display: inline-block; }
-    nav ul { gap: 10px; flex-wrap: wrap; justify-content: center; }
-    nav a { font-size: 0.85rem; padding: 5px 10px; }
+    .nav ul { gap: 10px; flex-wrap: wrap; justify-content: center; }
+    .nav a { font-size: 0.85rem; padding: 5px 10px; }
 
     /* --- 2. ヒーローセクションの修正 --- */
     .main-visual { min-height: 500px; height: 70vh; /* モバイルでは少し高さを抑える */ }
