--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ footer {
     /* --- 3. アラート/ニュースセクションの強制解除と調整 --- */
     .alert-banner { padding: 30px 15px; }
     .alert-banner h3 { font-size: 1.3rem; }
-    .alert-banner p { width: auto; max-width: 100%; font-size: 0.9rem; line-height: 1.5; }
+    .alert-banner p { width: auto; max-width: 100%; font-size: 0.9rem; line-height: 1.5;text-align: center; }
     
     .news-section { padding: 40px 15px; }
     .news-section h2 { font-size: 2rem; margin-bottom: 30px; }
