--- a/soleil-login.html
+++ b/soleil-login.html
@@ -47,6 +47,21 @@
             color: #FF8C00; /* Dark Orange/Amber Accent */
         }
 
+        .sp-only{
+            display: none;
+        }
+
+       @media (max-width: 414px) {
+
+            .sp-only{
+                display: block;
+            }
+
+            .pc-only{
+                display: none;
+            }
+        }
+
     </style>
 </head>
 
@@ -102,6 +117,8 @@
                 <input type="password" id="password" 
                        class="input-field w-full px-4 py-2 rounded-lg focus:ring-red-600 focus:border-red-600 transition duration-150">
             </div>
+            
+            <br class="sp-only">
 
             <button type="submit" 
                     class="w-full flex justify-center items-center py-2 px-4 border border-transparent rounded-lg shadow-sm text-sm font-medium text-white bg-soleil-red hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 transition duration-150 transform hover:scale-[1.01] focus:ring-offset-[#1f242c]">
